--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
+    "shuffle-seed": "^1.1.6",
     "ws": "^7.3.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.7",
+    "@types/shuffle-seed": "^1.1.0",
     "@types/ws": "^7.2.4",
     "nodemon": "^2.0.4",
     "tslint": "^5.12.1",
