--- a/config.json
+++ b/config.json
@@ -6,5 +6,6 @@
     "presenterName": "Erica",
     "presenterCamera": "https://obs.ninja/?view=",
     "juryName": "Jerommeke",
-    "juryCamera": "https://obs.ninja/?view="
+    "juryCamera": "https://obs.ninja/?view=",
+    "grandFinaleMode": false
 }
