--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "port": 8080,
-    "staticAssets": "/mnt/d/DSPTW/static",
-    "staticClient": "../dsptw-client/build",
+    "staticAssets": "/mnt/d/DSPTW/pubquiz",
+    "staticClient": "../client/build",
     "episode": 1,
     "presenterName": "Erica",
     "presenterCamera": "https://obs.ninja/?view=",
