--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node dist/dsptw-server/src/index.js",
+    "start": "tsc && node dist/server/src/index.js",
     "watch": "./node_modules/nodemon/bin/nodemon.js -e ts  --exec \"npm run start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "obs-websocket-js": "^4.0.1",
     "shuffle-seed": "^1.1.6",
     "ws": "^7.3.0"
   },
