--- a/config.json
+++ b/config.json
@@ -2,10 +2,7 @@
     "port": 8080,
     "staticAssets": "/mnt/d/DSPTW/pubquiz",
     "staticClient": "../client/build",
-    "episode": 1,
-    "presenterName": "Erica",
-    "presenterCamera": "https://obs.ninja/?view=",
-    "juryName": "Jerommeke",
-    "juryCamera": "https://obs.ninja/?view=",
-    "grandFinaleMode": false
+    "presenter1": "Lotte",
+    "presenter2": "Sebastiaan",
+    "questionDuration": 90
 }
