add mixed round text and photos

--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
     "staticAssets": "../static",
     "staticClient": "../client/build",
     "presenters": [
-        {"name": "Eva", "cameraLink": "https://obs.ninja/?view=evapresenteert"},
-        {"name": "Rogier", "cameraLink": "https://obs.ninja/?view=S9F3gwt"}
+        {"name": "Daimy", "cameraLink": "https://obs.ninja/?view=evapresenteert"},
+        {"name": "Maarten", "cameraLink": "https://obs.ninja/?view=S9F3gwt"}
     ],
     "questionDuration": 90
 }
