--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
     "staticAssets": "../static",
     "staticClient": "../trivial-client/build",
     "presenters": [
-        {"name": "Kim", "cameraLink": "https://obs.ninja/?view=DaimyDoetRaar"},
-        {"name": "Rogier", "cameraLink": "https://obs.ninja/?view=Maarten"}
+        {"name": "Kim", "cameraLink": "https://obs.ninja/?view=Kwimmel"},
+        {"name": "Rogier", "cameraLink": "https://obs.ninja/?view=KerstRogier"}
     ],
     "questionDuration": 60
 }
